# moex-portfolio-tracker

./: .gitattributes  .gitignore  CLAUDE.md  README.md
.agents/skills/desktop-tauri-runner/: SKILL.md  skill-smoke.ps1
.github/workflows/: ci.yml  deploy.yml  windows-portable.yml
docs/releases/: windows-portable.md
docs/superpowers/plans/: 2026-07-10-web-app-portfolio-tracker.md  2026-07-11-positions-table-ux.md  2026-07-12-multi-index-switch.md  2026-07-12-table-dashboard-cleanup.md  2026-07-13-broker-sync.md  2026-07-13-mobile-usability.md  2026-07-13-paired-positions.md  2026-07-13-table-modal-refinements.md  2026-07-14-finam-broker-sync.md  2026-07-14-test-infrastructure-gaps.md  2026-07-15-tauri-windows-portable.md  2026-07-17-manual-shares-reset-and-inline-edit.md  2026-07-17-orphan-broker-holdings.md  2026-07-17-reset-positions-by-source.md  2026-07-17-reset-source-table-refresh.md  2026-07-18-paired-positions-per-ticker-coefficients.md
docs/superpowers/specs/: 2026-07-10-moex-live-data-design.md  2026-07-10-web-app-functional-spec.md  (+18 more)
webapp/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  stryker.conf.json  tauri-build.cmd  tauri-build.ps1  tauri-dev.cmd  tauri-dev.ps1  tauri-launchers.smoke.ps1  tsconfig.json  update-and-run-desktop.ps1  vite.config.ts
webapp/e2e/: broker-sync.spec.ts  golden-path.spec.ts
webapp/e2e/fixtures/: iss.ts  (+1 more)
webapp/src/: App.tsx  setupTests.ts  styles.css  types.ts
webapp/src-tauri/: Cargo.toml  tauri.conf.json
webapp/src-tauri/capabilities/: default.json
webapp/src-tauri/src/: main.rs
(+149 files in other folders)
