[package]
name = "moex-portfolio-tracker"
version = "0.1.0"
description = "MOEX Portfolio Tracker Windows portable application"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-http = { version = "2", default-features = false, features = ["native-tls", "http2", "charset", "macos-system-configuration"] }
